platform/src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_Execution__c</fullName>
        <label>Proposed Execution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Name</label>
        <referenceTo>Vendors__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>